minor, changes on IT vm configs